--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ main{
 	transform: translateY(0px);
 }
 
-.semester{
+.sectiontitle{
 	font-size: 28px;
 	font-weight: 500;
 	text-align: center;
@@ -210,7 +210,7 @@ p a{
 @media all and (min-width: 960px) {
 
 	.container{
-		max-width: 960px;
+		max-width: 1440px;
 	}
 
 	#logo img{
