--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ p a{
 /* ============================================================
   MEDIA QUERIES 600-960PX
 ============================================================ */
-@media all and (min-width: 700px) {
+@media all and (min-width: 600px) {
 
 	.container{
 		max-width: 700px;
@@ -210,7 +210,7 @@ p a{
 @media all and (min-width: 960px) {
 
 	.container{
-		max-width: 1440px;
+		max-width: 1920;
 	}
 
 	#logo img{
