--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,14 @@ main{
 	margin: 30px 0 15px;
 }
 
+.sectionsubtitle{
+	font-size: 20px;
+	font-weight: 500;
+	text-align: center;
+	text-transform: uppercase;
+	margin: 30px 0 15px;
+}
+
 /* start  main hover effects */
 .description {
 	-webkit-backface-visibility: hidden;
