--- a/css/style.css
+++ b/css/style.css
@@ -1,238 +1,84 @@
-/* ============================================================
-  HEADER
-============================================================ */
-
-#logo img{
-	display: block;
-	margin: 0 auto;
-	width: 300px;
+header{
+  background: #e0e0e0;
+  width: 100%;
+  height: 76px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index:100;
+  border-bottom: 5px solid #e0e0e0;
 }
 
-#subheader{
-	margin: 0 60px;
-	margin-top: 20px;
-	text-align: center;
-	font-size: 16px;
+ul{
+  list-style: none;
 }
 
-
-/* ============================================================
-  MAIN
-============================================================ */
-
-/* overriding settings in base.css */
-
-
-main{
-	margin: 0;
-	text-align: center;
+li{
+  display: inline-block;
+  float: left;
+  padding: 10px;
 }
 
-.gifcontainer {
-    background-image:url('img/timelapse.gif');
-    background-size:cover;
+a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-.button {
-	background: rgba(30, 30, 30, 0.8);
-	border-radius: 3px;
-	color: white;
-	display: inline-block;
-	font-size: 18px;
-	font-weight: 600;
-	margin-top: 25px;
-	margin-bottom: 30px;
-	padding: 8px 18px;
-	transition: 100ms;
+a:hover{
+  text-decoration: underline;
 }
 
-.button:hover {
-	background: rgba(30, 30, 30, 1);
-	transform: scale(1.04);
+#logo{
+  margin: 10px;
+  float: left;
+  width: 60px;
+  height: 60px;
+  background-image:url(../img/Logo.png);
+  background-repeat:no-repeat;
+  background-size:contain;
+  display: block;
 }
 
-.container{
-	max-width: 450px;
-	padding: 0;
+nav{
+  float: right;
+  padding: 20px;
 }
 
-.item{
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-	display: block;
-	overflow: hidden;
-	margin: 15px auto;
-	height: 250px;
-	position: relative;
-	text-align: left;
-	transition: 0.3s;
-	width: 300px;
-}
-
-.item img{
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	border-radius: 3px
-	width: 300px;
-}
-
-.item:hover {
-	box-shadow: 0px 0px 40px rgba(12, 12, 12, 0.4);
-	transform: scale(1.06, 1.06);
-}
-
-.description {
-	height: 70px;
-	width: 100%;
-	padding: 10px;
-	padding-left: 20px;
-	position: absolute;
-	opacity: 0;
-	background: rgba(255,255,255,.85);
-	color: #505050;
-	-webkit-transform: translateY(0px);
-	-moz-transform: translateY(0px);
-	-ms-transform: translateY(0px);
-	transform: translateY(0px);
-}
-
-.sectiontitle{
-	font-size: 28px;
-	font-weight: 500;
-	text-align: center;
-	text-transform: uppercase;
-	margin: 30px 0 15px;
-}
-
-.sectionsubtitle{
-	font-size: 20px;
-	font-weight: 500;
-	text-align: center;
-	text-transform: uppercase;
-	margin: 30px 0 15px;
-}
-
-/* start  main hover effects */
-.description {
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.1s 0.3s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.1s 0.3s;
-	transition: transform 0.3s, opacity 0.1s 0.3s;
-}
-
-.item:hover .description{
-	-webkit-transform: translateY(-70px);
-	-moz-transform: translateY(-70px);
-	-ms-transform: translateY(-70px);
-	transform: translateY(-70px);
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.1s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.1s;
-	transition: transform 0.3s, opacity 0.1s;
-}
-
-.item:hover .description{
-	opacity: 1;
-}
-/* end hover effects */
-
-.title{
-	font-weight: 700;
-	font-size: 16px;
-}
-
-.view-site{
-	font-size: 12px;
-	padding: 7px 10px;
-	background: #505050;
-	color: #f3f3f3;
-	font-weight: 400;
-	text-align: center;
-	border-radius: 5px;
-	position: absolute;
-	right: 16px;
-	bottom: 18px;
-	opacity: .75;
-	transition: 0.3s;
-    -moz-transition: 0.3s;
-    -webkit-transition: 0.3s;
-}
-
-.view-site:hover{
-	opacity: 1;
+#menu-icon {
+ background: url(img/Logo.png) center;
+ background-size: cover;
+ width: 50px;
+ height: 50px;
+ display: hidden;
 }
 
 
-/* ============================================================
-  FOOTER
-============================================================ */
 
-#about{
-	max-width: 500px;
-	display: block;
-	margin: 0 auto;
-	text-align: center;
-	font-size: 18px;
-}
+@media only screen and (max-width: 640px){
+  header{
+    position: absolute;
+  }
+  #menu-icon{
+    display: inline-block;
 
-p a{
-	text-decoration: underline;
-}
-
-.footer-button {
-	background: rgba(236, 240, 241, 1.0);
-	border-radius: 3px;
-	color: rgba(0, 0, 0, 0.8);
-	display: inline-block;
-	font-size: 18px;
-	font-weight: 600;
-	margin-top: 25px;
-	padding: 8px 12px;
-}
-
-
-/* ============================================================
-  MEDIA QUERIES 600-960PX
-============================================================ */
-@media all and (min-width: 600px) {
-
-	.container{
-		max-width: 700px;
-	}
-
-	#logo img{
-		width: 400px;
-	}
-
-	.item{
-		width: 300px;
-		display: inline-block;
-		margin: 24px 24px;
-	}
-}
-
-/* ============================================================
-  MEDIA QUERIES >960PX
-============================================================ */
-@media all and (min-width: 960px) {
-
-	.container{
-		max-width: 1920;
-	}
-
-	#logo img{
-		width: 500px;
-	}
-
-	.item{
-		width: 400px;
-		display: inline-block;
-		margin: 30px 39px;
-	}
-
-	.item img{
-		width: 400px;
-	}
-
+  }
+  nav ul, nav:active ul{
+    display: none;
+    position: absolute;
+    padding: 20px;
+    background: #c5c5c5;
+    right: 10px;
+    top: 65px;
+    width: 35%;
+  }
+  nav:hover ul{
+    display: block;
+  }
+  nav li{
+    text-align: center;
+    width: 100%;
+    padding: 10px 0;
+    margin: 0;
+  }
 }
