--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,16 @@
+@import 'https//fonts.googleapis.com/css?family=Roboto';
+
+footer{
+  background: #e0e0e0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 76px;
+  border-top: 5px solid #e0e0e0;
+  text-align: center;
+}
+
 header{
   background: #e0e0e0;
   width: 100%;
@@ -42,11 +55,13 @@ a:hover{
 
 nav{
   float: right;
-  padding: 20px;
+  padding: 5px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20;
 }
 
 #menu-icon {
- background: url(img/Logo.png) center;
+ background: url(../img/Logo.png) no-repeat center;
  background-size: cover;
  width: 50px;
  height: 50px;
