--- a/css/base.css
+++ b/css/base.css
@@ -96,6 +96,10 @@ footer {
   color: #f2f1ef;
   margin-top: 50px;
   text-align: center;
+  position:absolute;
+  bottom:0;
+  left:0;
+  width:100%;
 }
 
 
