--- a/css/base.css
+++ b/css/base.css
@@ -96,6 +96,10 @@ footer {
   color: #f2f1ef;
   margin-top: 50px;
   text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 
